Fixed horizontal scroll

--- a/src/components/AllProducts/AllProducts.less
+++ b/src/components/AllProducts/AllProducts.less
@@ -41,10 +41,10 @@
 
 .shoppingListItems{
     padding: 1rem;
-    @media (min-width: @window-width-480) {
-        width: @desktop-app-width;
-        margin: 0 auto;
-    }
+    box-sizing: border-box;
+    max-width: @desktop-app-width;
+    width: 100%;
+    margin: 0 auto;
 }
 
 
