--- a/src/components/ListShoppingLists/ListShoppingLists.less
+++ b/src/components/ListShoppingLists/ListShoppingLists.less
@@ -66,10 +66,10 @@
     padding: 1rem;
     flex-grow: 1;
     display: flex;
-    @media (min-width: @window-width-480) {
-        width: @desktop-app-width;
-        margin: 0 auto;
-    }
+    box-sizing: border-box;
+    max-width: @desktop-app-width;
+    width: 100%;
+    margin: 0 auto;
 }
 
 .emptyListContent {
@@ -105,10 +105,9 @@
     flex-grow: 1;
     display: flex;
     flex-direction: column;
-    @media (min-width: @window-width-480) {
-        width: @desktop-app-width;
-        margin: 0 auto;
-    }
+    max-width: @desktop-app-width;
+    width: 100%;
+    margin: 0 auto;
 }
 
 .kebab {
