--- a/src/components/ShoppingList/ShoppingList.less
+++ b/src/components/ShoppingList/ShoppingList.less
@@ -93,8 +93,8 @@
     flex-grow: 1;
     display: flex;
     flex-direction: column;
-    @media (min-width: @window-width-480) {
-        width: @desktop-app-width;
-        margin: 0 auto;
-    }
+    box-sizing: border-box;
+    max-width: @desktop-app-width;
+    width: 100%;
+    margin: 0 auto;
 }
